<resources>
    <string name="app_name">Task Manager</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_enter">Login</string>
    <string name="lbl_menu_editar">Update</string>
    <string name="lbl_menu_excluir">Excluir</string>
    <string name="lbl_taskName">Task Name</string>
    <string name="lbl_taskDescription">Task Description</string>
    <string name="lbl_menu_add">Task Add</string>
    <string name="msg_welcome">Welcome %s!</string>
    <string name="msg_required">Field Required</string>
    <string name="msg_save_sucessfull">Save Sucessfull!</string>
    <string name="button_saveTask">Save</string>
    <string name="msg_delete_sucessfull">Register deleted sucessfull</string>
    <string name="lbl_confirm">Confirm</string>
    <string name="msg_confirm_delete">Want to delete this register?</string>
    <string name="lbl_yes">Yes</string>
    <string name="lbl_no">No</string>
    <string name="lbl_label_name">Name</string>
    <string name="lbl_label_description">Description</string>
    <string name="menu_label_add">Label Add</string>
    <string name="lbl_label_add">Label Add</string>
    <string name="lbl_titleColor">Colors</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_newUser">New User</string>
    <string name="lbl_create">Create</string>
    <string name="msg_user_pass_incorrect">User or Passsword incorrect!</string>
    <string name="msg_user_create_sucess">Create user sucessful !</string>
    <string name="button_NewLabel">+</string>
    <string name="lbl_zipCode">Cep</string>
    <string name="lbl_street">Address</string>
    <string name="lbl_city">City</string>
    <string name="lbl_number">Number</string>
    <string name="lbl_neighborhood">Neighborhood</string>
    <string name="lbl_state">State</string>
    <string name="lbl_type">Type</string>
    <string name="lbl_buscar">Search</string>
    <string name="lbl_webId">Web Id</string>
    <string name="lbl_menu_update">Update</string>


</resources>
