<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="15dp"
    android:weightSum="1">

    <EditText
        android:id="@+id/editTextLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lbl_login" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lbl_password"
        android:password="true" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="right"
        android:layout_marginTop="20dp">

        <Button
        android:id="@+id/buttonNewUser"
        style="?android:attr/borderlessButtonStyle"
        android:textColor="#2196F3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/lbl_newUser"
        android:textAlignment="gravity"
        android:layout_gravity="right" />

        <Button
            android:textColor="#ffff"
            android:background="?attr/colorPrimary"
            style="?android:attr/buttonStyleSmall"
            android:id="@+id/buttonLogin"
            android:layout_width="134dp"
            android:layout_height="36dp"
            android:text="@string/lbl_enter" />
    </LinearLayout>

</LinearLayout>